# NoorRay

./: .gitignore  .gitmodules  CMakeLists.txt  Setup.bat  imgui.ini  resource.rc
.github/workflows/: release-macos.yaml  release.yaml
assets/: CornellBoxMarcel.mtl  CornellBoxMarcel2.mtl  LittleTokyo.mtl  Shiba.mtl  imgui.ini  teapod_new.mtl
assets/icons/: icon.icns
shaders/: closesthit.glsl  closesthit.rchit  closesthit.rchit.spv  closesthit.spv  common.glsl  miss.glsl  miss.rmiss  miss.spv  raygen.glsl  raygen.rgen  raygen.rgen.spv  raygen.spv  recompile.bat
src/: Accel.cpp  Accel.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Context.cpp  Context.h  ConvertImageComputeShader.cpp  ConvertImageComputeShader.h  Globals.h  HdrToLdrCompute.h  ImGuiOverlay.cpp  ImGuiOverlay.h  Image.cpp  Image.h  InputTracker.cpp  InputTracker.h  Mesh.h  MeshAsset.cpp  MeshAsset.h  MeshInstance.cpp  MeshInstance.h  NoorRay.cpp  NoorRay.h  PushConstants.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Structs.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Utils.cpp  Utils.h  Viewer.cpp  Viewer.h  ViewerApi.cpp  (+2 more)
src/Camera/: InputTracker.cpp  InputTracker.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/Cpu/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  CpuRaytracer.cpp  CpuRaytracer.h  ShadersCpu.cpp  ShadersCpu.h
src/Mesh/: MeshAsset.cpp  MeshAsset.h  Transform.cpp  Transform.h
src/Mesh/BVH/: AABB.cpp  BVH.cpp  BVH.h
src/Raytracing/: ComputeRaytracer.cpp  ComputeRaytracer.h  CpuRaytracer.cpp  CpuRaytracer.h  GpuRaytracer.h  Raytracer.h  RtxRaytracer.cpp  RtxRaytracer.h
src/Scene/: MeshInstance.cpp  MeshInstance.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
src/Shaders/: Bindings.glsl  Common.glsl  HdrToLdrCompute.glsl  RayGeneration.glsl  RayGeneration.spv  ShadingModels.glsl  SharedStructs.h  Tonemapper.comp  recompile.bat  recompile.sh
src/Shaders/Compute/: PathTracer.comp
src/Shaders/PathTracing/: Bindings.glsl  ClosestHit.glsl  ClosestHit.spv  Common.glsl  Intersection.glsl  Miss.glsl  Miss.spv  PathTracer.comp  PrimaryRayGen.glsl  RayGeneration.glsl  ShadeClosestHit.glsl  ShadeMiss.glsl  SharedStructs.h
src/Shaders/PathTracing/RTX/: ClosestHit.glsl  Miss.glsl  RayGeneration.glsl
src/Shaders/RTX/: ClosestHit.glsl  Miss.glsl  RayGeneration.glsl
src/Shaders/RayTracing/: ClosestHit.glsl  ClosestHit.spv  Miss.glsl  Miss.spv
src/Shaders/ShadowRay/: AnyHit.glsl  ClosestHit.spv  Miss.glsl
src/Shaders/Tonemapping/: Tonemapper.comp
src/UI/: DebugPanel.cpp  DebugPanel.h  EnvironmentPanel.cpp  EnvironmentPanel.h  ImGuiComponent.h  ImGuiManager.cpp  ImGuiManager.h  MainMenuBar.cpp  MainMenuBar.h  OutlinerDetailsPanel.cpp  OutlinerDetailsPanel.h  RenderPanel.cpp  RenderPanel.h  ViewportPanel.cpp  ViewportPanel.h
src/Vulkan/: Accel.cpp  Accel.h  Buffer.cpp  Buffer.h  Context.cpp  Context.h  GpuRaytracer.cpp  GpuRaytracer.h  HdrToLdrCompute.cpp  HdrToLdrCompute.h  Image.cpp  Image.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Tonemapper.cpp  Tonemapper.h
src/shaders/: Common.glsl  ConvertImage.glsl  HdrToLdrCompute.glsl  RayGeneration.glsl  RayGeneration.spv  ShadingModels.glsl  SharedStructs.h  agx.glsl  recompile.bat
src/shaders/PathTracing/: ClosestHit.glsl  ClosestHit.spv  Miss.glsl  Miss.spv
src/shaders/RayTracing/: ClosestHit.glsl  ClosestHit.spv  Miss.glsl  Miss.spv
src/shaders/ShadowRay/: ClosestHit.glsl  ClosestHit.spv  Miss.glsl  Miss.spv
tests/: CornellBox2.blend  CornellBox2.mtl  Dino.mtl  Shiba.mtl  Valorant.gltf  Valorant.mtl  imgui.ini
tests/Love is Blue/: LoveIsBlue.dae  LoveIsBlue.fbx  LoveIsBlue.mtl
